solve only one paragraph/sentence in document/paragraph

--- a/WSTA_Project.ipynb
+++ b/WSTA_Project.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -369,11 +369,11 @@
     "def get_para(docid, query):\n",
     "    text = select_document(DOCFNAME, docid)\n",
     "    raw_paras = list(parse_paragraphs(text))\n",
+    "    if len(raw_paras) == 1: # If there's only one paragraph in the document\n",
+    "        return 0, raw_paras[0][1]\n",
     "    if docid not in inverted_index_dict.keys(): # check whether the document has been processed before\n",
-    "#         text = select_document(DOCFNAME, docid)\n",
-    "#         raw_paras = list(parse_paragraphs(text))\n",
-    "\n",
     "        para_term_freqs, M = get_freq_dict(raw_paras)\n",
+    "        \n",
     "        para_freqs = compute_para_freqs(para_term_freqs)\n",
     "        inverted_index = get_index(para_term_freqs, para_freqs, M)\n",
     "        inverted_index_dict[docid] = inverted_index\n",
@@ -388,7 +388,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_sent(result_para, query):\n",
+    "    sentences = sent_segmenter.tokenize(result_para)\n",
+    "    raw_sents = list(parse_paragraphs(sentences))\n",
+    "    if len(raw_sents) == 1: # If there's only one sentence in the paragraph\n",
+    "        return raw_sents[0][1]\n",
+    "    sent_term_freqs, M = get_freq_dict(raw_sents)\n",
+    "    sent_freqs = compute_para_freqs(sent_term_freqs)\n",
+    "    results = query_vsm(query, get_index(sent_term_freqs, sent_freqs, M))\n",
+    "    if results == []:\n",
+    "        return raw_sents[0][1]\n",
+    "    else:\n",
+    "        return raw_sents[results[0][0]][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -432,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -622,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -700,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -736,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -785,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -823,29 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_sent(result_para, query):\n",
-    "    sentences = sent_segmenter.tokenize(result_para)\n",
-    "    raw_sents = list(parse_paragraphs(sentences))\n",
-    "    sent_term_freqs, M = get_freq_dict(raw_sents)\n",
-    "    sent_freqs = compute_para_freqs(sent_term_freqs)\n",
-    "    results = query_vsm(query, get_index(sent_term_freqs, sent_freqs, M))\n",
-    "    if results == []:\n",
-    "        return raw_sents[0][1]\n",
-    "    else:\n",
-    "        return raw_sents[results[0][0]][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -857,33 +857,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Q': u'On what date did the companies that became the Computing-Tabulating-Recording Company get consolidated?', 'docid': 380, 'f_score': 0.2916666666666667, 'para': 5, 'ans': u'june 16 , 1911', 'my_ans': u'june new york state charles ranlett flint ctr', 'prec': 0.20588235294117646, 'recall': 0.5}\n",
-      "{'Q': u'What percentage of its desktop PCs does IBM plan to install Open Client on to?', 'docid': 380, 'f_score': 0.5, 'para': 22, 'ans': u'5 %', 'my_ans': u'5', 'prec': 1.0, 'recall': 0.3333333333333333}\n",
-      "{'Q': u'What year did IBM hire its first black salesman?', 'docid': 380, 'f_score': 0, 'para': 16, 'ans': u'1946', 'my_ans': u'company civil rights act', 'prec': 0.0, 'recall': 0.0}\n",
-      "{'Q': u'IBM made an acquisition in 2009, name it.', 'docid': 380, 'f_score': 0.12244897959183675, 'para': 4, 'ans': u'spss', 'my_ans': u'weather channel licensing agreement use data', 'prec': 0.06666666666666667, 'recall': 0.75}\n",
-      "{'Q': u'This IBM invention is known by the acronym UPC, what is the full name?', 'docid': 380, 'f_score': 0.7499999999999999, 'para': 2, 'ans': u'universal product code', 'my_ans': u'research laboratories research', 'prec': 0.8333333333333334, 'recall': 0.6818181818181818}\n",
-      "{'Q': u'In 2012 Fortune ranked the largest US firms by number employees, what was IBMs rank?', 'docid': 380, 'f_score': 0.5217391304347825, 'para': 1, 'ans': u'second largest', 'my_ans': u'ibm u.s. terms terms market capitalization nineteenth terms revenue', 'prec': 0.375, 'recall': 0.8571428571428571}\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-c4fd1067da95>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m \u001b[0mdevelfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'project_files/devel.json'\u001b[0m \u001b[0;31m# Need to change later\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_accuracy_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevelfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-21-c4fd1067da95>\u001b[0m in \u001b[0;36mget_accuracy_train\u001b[0;34m(fname)\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0;31m# my_sent is raw sent in the paragraph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0mmy_sent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_sent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_para\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mmy_ans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_ans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_sent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_type\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0;31m# calculate precision, recall and accuracy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-14-207b04951419>\u001b[0m in \u001b[0;36mget_ans\u001b[0;34m(my_sent, query, q_type)\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_who_ans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_sent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mq_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mHOW\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_how_ans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_sent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mq_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mWHERE\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_where_ans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_sent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-16-a729c1e7bc13>\u001b[0m in \u001b[0;36mget_how_ans\u001b[0;34m(my_sent, query)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mword_after_how\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mner_candidate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtag_sent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_splt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msent_splt_lemma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0mner_tags\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHOW_SUBCLASS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword_after_how\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mNER\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mans_candidate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_ans_candidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mner_candidate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mner_tags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-18-39c4595f6091>\u001b[0m in \u001b[0;36mtag_sent\u001b[0;34m(sent_splt, sent_splt_lemma, query, tag_type)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mtagger\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpos_tagger\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mtagged\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtagger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent_splt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m#     print tagged\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yifan/Library/Enthought/Canopy/edm/envs/User/lib/python2.7/site-packages/nltk/tag/stanford.pyc\u001b[0m in \u001b[0;36mtag\u001b[0;34m(self, tokens)\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;31m# This function should return list of tuple rather than list of list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtag_sents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtag_sents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msentences\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yifan/Library/Enthought/Canopy/edm/envs/User/lib/python2.7/site-packages/nltk/tag/stanford.pyc\u001b[0m in \u001b[0;36mtag_sents\u001b[0;34m(self, sentences)\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0;31m# Run the tagger and get the output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m         stanpos_output, _stderr = java(cmd, classpath=self._stanford_jar,\n\u001b[0;32m---> 99\u001b[0;31m                                        stdout=PIPE, stderr=PIPE)\n\u001b[0m\u001b[1;32m    100\u001b[0m         \u001b[0mstanpos_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstanpos_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yifan/Library/Enthought/Canopy/edm/envs/User/lib/python2.7/site-packages/nltk/__init__.pyc\u001b[0m in \u001b[0;36mjava\u001b[0;34m(cmd, classpath, stdin, stdout, stderr, blocking)\u001b[0m\n\u001b[1;32m    129\u001b[0m     \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstdin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mblocking\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommunicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    132\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0;31m# Check the return code.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yifan/Library/Enthought/Canopy/edm/envs/User/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36mcommunicate\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    477\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    478\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 479\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_communicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    480\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    481\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yifan/Library/Enthought/Canopy/edm/envs/User/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36m_communicate\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m   1096\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1097\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0m_has_poll\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1098\u001b[0;31m                 \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_communicate_with_poll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1099\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1100\u001b[0m                 \u001b[0mstdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstderr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_communicate_with_select\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/yifan/Library/Enthought/Canopy/edm/envs/User/lib/python2.7/subprocess.pyc\u001b[0m in \u001b[0;36m_communicate_with_poll\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m   1150\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0mfd2file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1151\u001b[0m                 \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1152\u001b[0;31m                     \u001b[0mready\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpoller\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1153\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mselect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1154\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0merrno\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEINTR\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "{'Q': u'Where does SR 94 merge with I-15?', 'docid': 383, 'f_score': 0.22471910112359553, 'para': 43, 'ans': u'at miramar', 'my_ans': u'east county miramar la jolla east county carmel valley san diego bay san diego-coronado bridge south san diego palm avenue', 'prec': 0.12658227848101267, 'recall': 1.0}\n"
      ]
     }
    ],
